# gitanalytics

./: CHANGELOG.md  README.md  git_analytics_report_20250612_134633.md  git_analytics_report_20250612_163504.md  git_analytics_report_20250612_164009.md  git_analytics_report_20250612_164552.md  git_analytics_report_20250612_172810.md  git_analytics_report_20250612_174205.md  git_analytics_report_20250612_180530.md  git_analytics_report_20250612_180537.md  git_analytics_report_20250612_180634.md  git_analytics_report_20250612_180649.md  git_analytics_report_20250612_180746.md  git_analytics_report_20250612_180752.md  git_analytics_report_20250612_180900.md  git_analytics_report_20250612_180913.md  git_analytics_report_20250612_180953.md  git_analytics_report_20250612_181013.md  git_analytics_report_20250612_181041.md  git_analytics_report_20250612_181053.md  git_analytics_report_20250612_192909.md  git_analytics_report_20250613_124920.md  git_analytics_report_20250613_131541.md  git_analytics_report_20250613_134443.md  pyproject.toml  requirements.txt  setup.py
.gitanalytics/: historical_metrics.json
memory-bank/: activeContext.md  progress.md
src/gitanalytics/: ai_summarizer.py  cli.py  complexity_analyzer.py  git_analyzer.py  language_detector.py  report_builder.py  security_analyzer.py  thematic_analyzer.py
src/gitanalytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gitanalytics/templates/: report.md.j2
tests/: conftest.py  test_cli.py  test_git_analyzer.py
